constructors of Integer/Double replaced with valueOf